--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="setting_sort_summary">Change the sorting order</string>
     <string name="title_activity_settings">Settings</string>
     <string name="sort_order_key">sort_order</string>
+    <string name="sort_order_default">popularity</string>
     <string name="refresh_action_title">Refresh</string>
     <string name="action_settings_title">Settings</string>
     <string-array name="pref_sort_list_titles">
@@ -15,7 +16,7 @@
 
     </string-array>
     <string-array name="pref_sort_list_values">
-        <item>popular</item>
-        <item>top_rated</item>
+        <item>popularity</item>
+        <item>vote_average</item>
     </string-array>
 </resources>
