fixed details view
need to add shares preferences fix details view in case of tablet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,8 @@
         <item>popularity</item>
         <item>vote_average</item>
     </string-array>
+
+    <string name="favourite_button_title">MARK AS FAVOURITE</string>
+    <string name="trailer_title">Trailers</string>
+    <string name="reviews_title">Reviews</string>
 </resources>
