--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,11 +13,12 @@
     <string-array name="pref_sort_list_titles">
         <item>most Popular</item>
         <item>highest Rated</item>
-
+        <item>favourites</item>
     </string-array>
     <string-array name="pref_sort_list_values">
         <item>popularity</item>
         <item>vote_average</item>
+        <item>favourites</item>
     </string-array>
 
     <string name="favourite_button_title">MARK AS FAVOURITE</string>
