--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="favourite_button_title">MARK AS FAVOURITE</string>
     <string name="trailer_title">Trailers</string>
     <string name="reviews_title">Reviews</string>
+    <string name="api_key">d1ef9dc0336bed3f42aa90354fdc4abf</string>
 </resources>
